--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <link rel="icon" href="https://mazhuang.org/favicon.ico" type="image/x-icon" id="page_favionc">
     <link href="https://cdn.jsdelivr.net/gh/mzlogin/dujitang/assets/min.css" rel="stylesheet">
     <link rel="alternate icon" type="image/png" href="https://cdn.jsdelivr.net/gh/mzlogin/dujitang/assets/logo.png">
-
+    <style>
+        body {
+            background-image: url("background.jpg");
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
   </head>
   <body>
 
